src/test/deca/syntax/invalid/provided/accolade_manquante.deca
{
    if (true) {
        int x = 10;
    // Erreur : accolade fermante manquante
}
